# asymmetric_crypto_primitives

./: CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/thclab_signing_plugin/: ThclabSigningPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  maintest.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: asymmetric_crypto_primitives.podspec
ios/Classes/: AsymmetricCryptoPrimitivesPlugin.h  AsymmetricCryptoPrimitivesPlugin.m  SwiftAsymmetricCryptoPrimitivesPlugin.swift
lib/: asymmetric_crypto_primitives.dart  ed25519_signer.dart  exceptions.dart  rsa_signer.dart  thclab_signing_plugin.dart
macos/: asymmetric_crypto_primitives.podspec
macos/Classes/: AsymmetricCryptoPrimitivesPlugin.swift
sodium_key_generator_plugin/: README.md  pubspec.yaml
sodium_key_generator_plugin/cmake/: main.cmake  sodium_key_generator.cmake
sodium_key_generator_plugin/example/: README.md  pubspec.yaml
sodium_key_generator_plugin/example/lib/: main.dart
sodium_key_generator_plugin/example/test/: widget_test.dart
sodium_key_generator_plugin/example/windows/: CMakeLists.txt
sodium_key_generator_plugin/example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
sodium_key_generator_plugin/example/windows/runner/: Runner.rc  main.cpp
sodium_key_generator_plugin/lib/: bridge_generated.dart  exceptions.dart  sodium_key_generator_plugin.dart
sodium_key_generator_plugin/windows/: CMakeLists.txt  sodium_key_generator_plugin.cpp  sodium_key_generator_plugin.h  sodium_key_generator_plugin_c_api.cpp
sodium_key_generator_plugin/windows/include/sodium_key_generator_plugin/: sodium_key_generator_plugin_c_api.h
sodium_key_generator_plugin/windows/sodium_key_generator/: CMakeLists.txt  sodium_key_generator.lib
windows/: CMakeLists.txt  asymmetric_crypto_primitives_plugin.cpp  asymmetric_crypto_primitives_plugin.h  asymmetric_crypto_primitives_plugin_c_api.cpp
windows/include/asymmetric_crypto_primitives/: asymmetric_crypto_primitives_plugin_c_api.h
(+3 files in other folders)
